# LibIntrinsic

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
apps/: similarity_search.py
examples/: 001_load_mesh.py  002_check_mass_matrix.py  003_check_stiff_mat.py  004_check_spectrum.py  005_compute_hks_sphere.py  006_compute_hks_Donut.py  007_match_shapes_Donut.py  008_match_shapes_w_bumps.py  009_global_comparison.py  010_visualize_modes.py  011_visualize_modes_all-in-one.py
grasshopper/: Example_Scene.gh  Spectral Match.ghuser
libintrinsic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
libintrinsic/datasets/: loaders.py
libintrinsic/functional/: maps.py
libintrinsic/geometry/: mesh.py
libintrinsic/learning/: clustering.py
libintrinsic/numerics/: solvers.py
libintrinsic/spectral/: descriptors.py  laplacian.py
