[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "libintrinsic"
version = "0.1.0"
description = "A Python library for intrinsic shape analysis and spectral geometry."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Pouria Shahhoseini Nia"}
]
license = {text = "MIT"}
keywords = ["spectral-geometry", "shape-analysis", "computational-design", "rhino", "grasshopper"]
dependencies = [
    "numpy>=2.4.0",
    "scipy>=1.16.3",
    "trimesh>=4.10.1",
    "scikit-learn>=1.8.0",
    "networkx>=3.6.1",
    "matplotlib>=3.10.8",
    "pillow>=12.0.0"
]

[project.urls]
"Homepage" = "https://github.com/Pouria-Nia/LibIntrinsic"
"Repository" = "https://github.com/Pouria-Nia/LibIntrinsic"

[project.optional-dependencies]
dev = ["pytest"]